--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,74 +1,232 @@
 @import "https://fonts.fontstorage.com/import/sansation.css";
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+   /* -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;*/
+}
+
 .body{
+    display: flex;
+    justify-content: center;
     margin: 0px;
 }
 
+header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100rem;
+}
+
+.topnav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    width: 100rem;
+}
+
+
 .navuphead{
     display: flex;
+    justify-content: center;
     align-items: center;
-    justify-content: space-around;
-    margin-top: 20px;
 }
 
 .textheader{
     font-family: "Sansation";
     font-weight: 400;
-    font-size: 20px;
+    font-size: 1.2rem;
     text-align: center;
     color: #4f4f4f;
-    margin-left: 32px;
-    margin-top: 3px;
+    margin-top: 4px;
+    margin-left: 0.2rem;
 }
 
 .headerimg2{
-    position: absolute;
+    display: flex;
 }
 
 .headerimg1{
-    position: absolute;
+    display: flex;
 }
 
 .headerimg3{
-    position: absolute;
+    display: flex;
 }
 
 .time{
-    position: relative;
+    display: flex;
 }
 
 .geo{
-    position: relative;
+    display: flex;
+    margin-left: 8rem;
 }
 
 .phone{
-    position: relative;
+    display: flex;
+    margin-left: 8rem;
 }
 
 .aboutcontainer{
-    
-    width: 2100px;
-    height: 406px;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
-    border-radius: 70px;
+    border-radius: 90px;
     background: linear-gradient(90deg, #67f6ee, #4d82b8);
     margin-left: auto;
     margin-right: auto;
-    margin-top: 30px;
 }
 
 .line{
     display: flex;
     align-items: center;
     justify-content: space-around;
-    margin-right: 300px;
+    border-bottom: 1px solid white ;
+
+}
+
+.regicon{
+    width: 1.5rem;
+    height: 1.5rem;
 }
 
 .nav-item{
     font-family: "Inter";
     font-weight: 400;
-    font-size: 24px;
+    font-size: 1.5rem;
     color: #FFFFFF;
-    margin-left: 100px;
+    margin-left: 5rem;
+    text-decoration: none;
+    background-color: transparent;
+    border: none;
 }
 
 
+
+
+.bottomnuv{
+    display:flex;
+    flex-direction:row;
+    align-items: center;
+}
+
+.woman{
+    display:flex;
+}
+
+
+
+.slide-ellipse{
+    width: 30rem;
+    height: 15rem;
+    display:flex;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #FFFFFF;
+    border-radius: 50px;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+}
+
+
+
+.titleinfo{
+    font-family: "Sansation";
+    font-weight: 400;
+    font-size: 1.3rem;
+    text-align: center;
+    color:black;
+    padding:1rem;
+}
+
+.subtitleinfo{
+    font-family: "Sansation";
+    
+    font-size: 1rem;
+    font-weight: 400;
+    color: #5b5b5b;
+    padding:1rem;
+    
+}
+
+
+.textbtn{
+    font-family: "Inter";
+    display: flex;
+    background-color: #FFFFFF;
+    border-radius: 133px;
+    width: 12rem;
+    height: 3rem;
+    font-weight: 700;
+    font-size: 1.35rem;
+    color: #1fbab5;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+    border: 3px solid rgba(31, 186, 181, 0.2);
+    justify-content: center;
+    align-items: center;
+}
+
+.zapis{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 5rem;
+}
+
+.titlezapis{
+
+    font-family: "Sansation";
+    font-weight: 700;
+    font-size: 2.5rem;
+    color:#FFFFFF;
+    margin-bottom: 2rem;
+}
+
+.subtittlezapis{
+    text-align: center;
+    color: #FFFFFF;
+    font-family: "Sansation";
+    font-weight: 400;
+    font-size: 1.25rem;
+    margin-bottom: 3rem;
+}
+
+.registrationbtn{
+    color: #faff00;
+    text-decoration: none;
+    background-color: transparent;
+    border: none;
+    font-family: "Sansation";
+    font-weight: 400;
+    font-size: 1.25rem;
+
+}
+
+.zapis-text{
+    font-family: "Inter";
+    align-items: center;
+    display: flex;
+    background-color: #FFFFFF;
+    border-radius: 133px;
+    width: 18rem;
+    justify-content: center;
+    justify-content: space-around;
+    height: 4.5rem;
+    font-weight: 600;
+    font-size: 1.5rem;
+    color: #1fbab5;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+    border: 3px solid rgba(31, 186, 181, 0.2);
+}
