--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,16 +1,19 @@
 @import "https://fonts.fontstorage.com/import/sansation.css";
 
+/* ШАПКА */
+
+
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-   /* -webkit-user-select: none;
+    /* -webkit-user-select: none;
     -khtml-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;*/
 }
 
-.body{
+.body {
     display: flex;
     justify-content: center;
     margin: 0px;
@@ -33,13 +36,13 @@ header {
 }
 
 
-.navuphead{
+.navuphead {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.textheader{
+.textheader {
     font-family: "Sansation";
     font-weight: 400;
     font-size: 1.2rem;
@@ -49,33 +52,33 @@ header {
     margin-left: 0.2rem;
 }
 
-.headerimg2{
+.headerimg2 {
     display: flex;
 }
 
-.headerimg1{
+.headerimg1 {
     display: flex;
 }
 
-.headerimg3{
+.headerimg3 {
     display: flex;
 }
 
-.time{
+.time {
     display: flex;
 }
 
-.geo{
-    display: flex;
-    margin-left: 8rem;
-}
-
-.phone{
+.geo {
     display: flex;
     margin-left: 8rem;
 }
 
-.aboutcontainer{
+.phone {
+    display: flex;
+    margin-left: 8rem;
+}
+
+.aboutcontainer {
     display: flex;
     flex-direction: column;
     justify-content: start;
@@ -87,20 +90,20 @@ header {
     margin-right: auto;
 }
 
-.line{
+.line {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    border-bottom: 1px solid white ;
+    border-bottom: 1px solid white;
 
 }
 
-.regicon{
+.regicon {
     width: 1.5rem;
     height: 1.5rem;
 }
 
-.nav-item{
+.nav-item {
     font-family: "Inter";
     font-weight: 400;
     font-size: 1.5rem;
@@ -114,27 +117,27 @@ header {
 
 
 
-.bottomnuv{
-    display:flex;
-    flex-direction:row;
+.bottomnuv {
+    display: flex;
+    flex-direction: row;
     align-items: center;
 }
 
-.woman{
-    display:flex;
+.woman {
+    display: flex;
 }
 
 
 
-.slide-ellipse{
+.slide-ellipse {
     width: 30rem;
     height: 15rem;
-    display:flex;
+    display: flex;
     margin-left: auto;
     margin-right: auto;
     background-color: #FFFFFF;
     border-radius: 50px;
-    display:flex;
+    display: flex;
     flex-direction: column;
     align-items: center;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
@@ -142,27 +145,27 @@ header {
 
 
 
-.titleinfo{
+.titleinfo {
     font-family: "Sansation";
     font-weight: 400;
     font-size: 1.3rem;
     text-align: center;
-    color:black;
-    padding:1rem;
+    color: black;
+    padding: 1rem;
 }
 
-.subtitleinfo{
+.subtitleinfo {
     font-family: "Sansation";
-    
+
     font-size: 1rem;
     font-weight: 400;
     color: #5b5b5b;
-    padding:1rem;
-    
+    padding: 1rem;
+
 }
 
 
-.textbtn{
+.textbtn {
     font-family: "Inter";
     display: flex;
     background-color: #FFFFFF;
@@ -178,23 +181,23 @@ header {
     align-items: center;
 }
 
-.zapis{
+.zapis {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-left: 5rem;
 }
 
-.titlezapis{
+.titlezapis {
 
     font-family: "Sansation";
     font-weight: 700;
     font-size: 2.5rem;
-    color:#FFFFFF;
+    color: #FFFFFF;
     margin-bottom: 2rem;
 }
 
-.subtittlezapis{
+.subtittlezapis {
     text-align: center;
     color: #FFFFFF;
     font-family: "Sansation";
@@ -203,7 +206,7 @@ header {
     margin-bottom: 3rem;
 }
 
-.registrationbtn{
+.registrationbtn {
     color: #faff00;
     text-decoration: none;
     background-color: transparent;
@@ -214,7 +217,7 @@ header {
 
 }
 
-.zapis-text{
+.zapis-text {
     font-family: "Inter";
     align-items: center;
     display: flex;
@@ -229,4 +232,160 @@ header {
     color: #1fbab5;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
     border: 3px solid rgba(31, 186, 181, 0.2);
+}
+
+/* модальное окно выбора врача */
+
+.modal {
+    position: fixed;
+    display: flex;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: 99998;
+    background-color: rgba(0, 0, 0, .3);
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    overflow-y: auto;
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity .2s, visibility .2s;
+}
+
+.modal__box {
+    display: flex;
+    
+    border-radius: 25px;
+    position: relative;
+    max-width: 900px;
+    padding: 100px;
+    z-index: 1;
+    margin: 30px 15px;
+    background-color: white;
+    box-shadow: 0px 0px 17px -7px rgba(34, 60, 80, 0.2);
+    transform: scale(0);
+    transition: transform .3s;
+}
+
+.modal__close-btn {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    border: none;
+    background-color: transparent;
+    padding: 5px;
+    cursor: pointer;
+}
+
+.modal__close-btn svg path {
+    transition: fill .2s;
+}
+
+.modal__close-btn:hover svg path {
+    fill: #c40a4a;
+}
+
+.modal__close-btn:active svg path {
+    fill: #0b4047;
+}
+
+.modal.open {
+    visibility: visible;
+    opacity: 1;
+}
+
+.modal.open .modal__box {
+    transform: scale(1);
+}
+
+.titledoc{
+    display: flex;
+    justify-content: center;
+    
+}
+
+.titletextdoc{
+    font-family: "Sansation";
+    text-align: center;
+    color: #8c8787;
+    font-weight: 700;
+    font-size: 2.5rem;
+}
+
+.rowvibordoctor {
+    display: flex;
+
+}
+
+.colvibordoctor {
+    display: flex;
+    flex-direction: column;
+
+}
+
+
+.doctor {
+    width: 10.6875rem;
+    height: 2.67187rem;
+    border-radius: 133px;
+    background-color: #FFFFFF;
+    stroke-width: 3px;
+    border-color: rgba(31, 186, 181, 0.4);
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    margin-left: 5rem;
+    margin-bottom: 5rem;
+    text-align: center;
+    color: #1fbab5;
+    font-weight: 700;
+    font-family: "Inter";
+    font-size: 1.25rem;
+}
+
+.doctorlower {
+    width: 10.6875rem;
+    height: 2.67187rem;
+    border-radius: 133px;
+    background-color: #FFFFFF;
+    stroke-width: 3px;
+    border-color: rgba(31, 186, 181, 0.4);
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    margin-left: 5rem;
+    text-align: center;
+    color: #1fbab5;
+    font-weight: 700;
+    font-family: "Inter";
+    font-size: 1.25rem;
+}
+
+.doctor1stolbik {
+    margin-bottom: 5rem;
+    width: 10.6875rem;
+    height: 2.67187rem;
+    border-radius: 133px;
+    background-color: #FFFFFF;
+    stroke-width: 3px;
+    border-color: rgba(31, 186, 181, 0.4);
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    text-align: center;
+    color: #1fbab5;
+    font-weight: 700;
+    font-family: "Inter";
+    font-size: 1.25rem;
+}
+
+.doctor1stolbiklower {
+    width: 10.6875rem;
+    height: 2.67187rem;
+    border-radius: 133px;
+    background-color: #FFFFFF;
+    stroke-width: 3px;
+    border-color: rgba(31, 186, 181, 0.4);
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    text-align: center;
+    color: #1fbab5;
+    font-weight: 700;
+    font-family: "Inter";
+    font-size: 1.25rem;
 }
