--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,9 +20,7 @@
 }
 
 header {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+
     width: 100rem;
 }
 
@@ -449,3 +447,90 @@ header {
     font-size: 1.3rem;
 }
 
+.subreg{
+    border: none;
+    font-size: 1.2rem;
+    color:#0019fa;
+    font-weight: 400;
+    font-family: "Inter";
+    text-align: center;
+}
+
+.question{
+    margin-top: 1.5rem;
+    font-size: 1.3rem;
+    font-weight: 500;
+    font-family: "Inter";
+    text-align: center;
+}
+
+/* Блок информации */
+
+.block-1{
+    display: flex;
+    margin-top: 5rem;
+    flex-direction: row;
+
+}
+
+.circle-1{
+    
+    width: 48.5625rem;
+    height: 26.1875rem;
+    border-radius: 133px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+    border: 10px solid rgba(31, 186, 181, 0.25);
+}
+
+.tittle-1{
+    text-align: center;
+    font-weight: 700;
+    color:#000;
+    font-size: 2.5rem;
+    font-family: "Sansation";
+    padding: 1.5rem;
+}
+
+.subtitle-1{
+    color: #7c6e6e;
+    font-family: "Sansation";
+    font-weight: 700;
+    font-size: 1.6rem;
+    text-align: center;
+    padding: 0.7rem;
+}
+
+.block-2{
+    display: flex;
+    margin-top: 5rem;
+    flex-direction: row;
+    justify-content: flex-end;
+}
+
+.block-3{
+    display: flex;
+    margin-top: 5rem;
+    flex-direction: row;
+    justify-content: flex-start;
+}
+
+.block-4{
+    display: flex;
+    margin-top: 5rem;
+    flex-direction: row;
+    justify-content: flex-end;
+}
+
+.block-5{
+    display: flex;
+    margin-top: 5rem;
+    flex-direction: row;
+    justify-content: flex-start;
+}
+
+.block-6{
+    display: flex;
+    margin-top: 5rem;
+    flex-direction: row;
+    justify-content: flex-end;
+}
